[tool.poetry]
name = "picama"
version = "0.1.0"
description = "Piattaforma Integrata Concorsi Atenei Magicamente Automatizzata"
authors = ["gtrevisan <gtrevisan@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.0"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.3.0"
yamllint = "^1.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
