[project]
name = "picama"
version = "0.2.0"
description = "Piattaforma Integrata Concorsi Atenei Magicamente Automatizzata"
authors = [
    {name = "gtrevisan",email = "gtrevisan@users.noreply.github.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.0",
    "yamllint>=1.37.0",
]

[project.scripts]
matrix = "picama.matrix:main"
readme = "picama.readme:main"
parse = "picama.parse:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
